@@ -560,40 +560,3 @@ VOID WINAPI xapi::EmuXapiBootDash(DWORD UnknownA, DWORD UnknownB, DWORD UnknownC
     return;
 }
 
-// ******************************************************************
-// * func: Emu__rtinit
-// ******************************************************************
-VOID xapi::Emu__rtinit()
-{
-    EmuSwapFS();   // Win2k/XP FS
-
-    // ******************************************************************
-    // * debug trace
-    // ******************************************************************
-    #ifdef _DEBUG_TRACE
-    {
-        printf("EmuXapi (0x%X): Emu__rtinit();\n", GetCurrentThreadId());
-    }
-    #endif
-
-    EmuSwapFS();   // XBox FS
-}
-
-// ******************************************************************
-// * func: Emu__cinit
-// ******************************************************************
-VOID xapi::Emu__cinit()
-{
-    EmuSwapFS();   // Win2k/XP FS
-
-    // ******************************************************************
-    // * debug trace
-    // ******************************************************************
-    #ifdef _DEBUG_TRACE
-    {
-        printf("EmuXapi (0x%X): Emu__cinit();\n", GetCurrentThreadId());
-    }
-    #endif
-
-    EmuSwapFS();   // XBox FS
-}
