@@ -5,6 +5,11 @@ version: 0.7.2 (??/??/03)
 
 - Textures
 
+- rtinit/cinit HLE and pre-entry execution was
+  totally removed and occurs naturally on a low
+  level now! (this is great!). This means stdio
+  and other c libs are initialized correctly.
+
 version: 0.7.1 (05/30/03)
 --------------------------------
 
